@@ -5,7 +5,7 @@ require 'stringio'
 class TerminalTester
   include Bud
   state do
-    scratch :saw_input
+    scratch :saw_input, stdio.schema
   end
 
   bloom do
@@ -15,15 +15,18 @@ end
 
 class TestTerminal < MiniTest::Unit::TestCase
   def test_stdin
-    input_buf = StringIO.new("I am input from stdin\n")
+    input_lines = ["line1", "line2", "line3"]
+    input_str = input_lines.join("\n") + "\n"
+    input_buf = StringIO.new(input_str)
     q = Queue.new
-    t = TerminalTester.new(:stdin => input_buf)
-    t.register_callback(:saw_input) do |tbl|
-      q.push(tbl.length)
+    b = TerminalTester.new(:stdin => input_buf)
+    b.register_callback(:saw_input) do |tbl|
+      tbl.to_a.each {|t| q.push(t)}
     end
-    t.run_bg
-    rv = q.pop
-    assert_equal(1, rv)
-    t.stop
+    b.run_bg
+    rv = []
+    input_lines.length.times { rv << q.pop }
+    assert_equal(input_lines.map{|l| [l]}.sort, rv.sort)
+    b.stop
   end
 end
