@@ -3,6 +3,7 @@
 * Reject attempts to insert into stdio via <+ (#288)
 * Support "Comparable" for Bud::Lattice values
 * Improve MRI 1.8 compatibility
+* Restore functionality of reading from stdio (i.e., stdin) with MRI 1.9
 * Require ruby_parser >= 3.1.0
 * Fix bug in bootstrap blocks for lattice values
 * Fix bug in rescan/invalidation for rules that reference lattice values and use
